<resources>
    <string name="app_name">Sample App</string>
    <string name="description">Description</string>
    <string name="qty">Qty</string>
    <string name="cost">Cost</string>
    <string name="add_material">Add material + </string>
    <string name="add">Add</string>
    <string name="lbl_material">Material</string>
    <string name="submit">Submit</string>
    <string name="total">Total</string>
    <string name="no_job_found">No job found with material item</string>
    <string name="job_list">Job list</string>
    <string name="lbl_job_detail">Job Detail</string>
</resources>
