<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/item_main_LAY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/item_material_TXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padd_2"
            android:paddingLeft="@dimen/margin_5"
            android:paddingRight="@dimen/margin_5"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/item_EDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_corner_grey"
            android:gravity="top|left"
            android:hint="Item"
            android:imeOptions="actionNext"
            android:padding="@dimen/margin_5"
            android:singleLine="true" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin_5"
                android:paddingRight="@dimen/margin_5">

                <TextView
                    android:id="@+id/qty_TXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padd_2"
                    android:paddingLeft="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:text="@string/qty"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/qty_EDT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_corner_grey"
                    android:gravity="top|left"
                    android:hint="Qty"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:padding="@dimen/margin_5"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"

                android:paddingLeft="@dimen/margin_5"
                android:paddingRight="@dimen/margin_5">

                <TextView
                    android:id="@+id/cost_TXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padd_2"
                    android:paddingLeft="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:text="@string/cost"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/cost_EDT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_corner_grey"
                    android:gravity="top|left"
                    android:hint="Cost"
                    android:imeOptions="actionNext"

                    android:inputType="number"
                    android:padding="@dimen/margin_5"
                    android:singleLine="true" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin_5"
                android:paddingRight="@dimen/margin_5">

                <TextView
                    android:id="@+id/tax_TXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padd_2"
                    android:paddingLeft="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:text="Tax"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/tax_EDT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_corner_grey"
                    android:gravity="top|left"
                    android:hint="Tax"
                    android:imeOptions="actionNext"

                    android:inputType="number"
                    android:padding="@dimen/margin_5"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"

                android:paddingLeft="@dimen/margin_5"
                android:paddingRight="@dimen/margin_5">

                <TextView
                    android:id="@+id/total_TXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padd_2"
                    android:paddingLeft="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:text="@string/total"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/total_EDT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_corner_grey"
                    android:gravity="top|left"
                    android:hint="Total"
                    android:imeOptions="actionNext"

                    android:inputType="number"
                    android:padding="@dimen/margin_5"
                    android:singleLine="true" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>